# jackal_simulator_mr_modifcations

jackal_description/launch/: description.launch
jackal_description/urdf/: jackal_1.urdf.xacro  jackal_2.urdf.xacro  jackal_JULES.gazebo.xacro  jackal_JULES.urdf.xacro  jackal_with_param.urdf.xacro
jackal_simulator/jackal_gazebo/launch/: jackal_world.launch  spawn_jackal.launch
jackal_simulator/jackal_gazebo/worlds/: jules_empty_world.world
mobile_robot_state_publisher/: CMakeLists.txt
mobile_robot_state_publisher/config/: jackal_JULES.yaml
mobile_robot_state_publisher/launch/: mobile_robot_publisher.launch  mobile_robot_publisher_mr.launch
mobile_robot_state_publisher/src/: mobile_robot_state_publisher_node.cpp  mobile_robot_state_publisher_node_mr.cpp
